devops/04_k8s/section03/subsection03/vue-canary-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: vue-canary-svc
spec:
  selector:
    app: vue-canary
    track: canary
  ports:
    - port: 8001
      targetPort: 80
