devops/04_k8s/section03/subsection03/vue-stable-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: vue-stable-svc
spec:
  selector:
    app: vue-canary
    track: stable
  ports:
    - port: 8000
      targetPort: 80
