devops/04_k8s/section03/subsection03/vue-canary-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-canary-ing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vue-canary-svc
                port:
                  number: 8001
