devops/04_k8s/section03/subsection03/vue-stable-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-stable-ing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vue-stable-svc
                port:
                  number: 8000
